# ssif

./: meson.build  ssif-host.service  ssif-slave.service  ssif.h  ssif.json  ssif_host_main.cpp  ssif_json.c  ssif_json.h  ssif_slave_main.c  ssifhost.c  ssifhost.h
